[tool.poetry]
name = "defusedcsv"
version = "1.1.0"
description = "Drop-in replacement for Python\\'s CSV library that tries to mitigate CSV injection atta"
authors = ["Raphael Michel <mail@raphaelmichel.de>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
tox = "^3.14.6"
coverage = "^5.0.4"
codecov = "^2.0.22"
isort = "^4.3.21"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
